# my-ghcjs-project

./: README.md  my-ghcjs-project.cabal  stack.yaml
app/: CallJS.hs  Dom.hs  First.hs  domj.hs
