name:                my-ghcjs-project
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/my-ghcjs-project#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable first-exe
  hs-source-dirs:      app
  main-is:             First.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -DGHCJS_BROWSER
  build-depends:       base
  default-language:    Haskell2010

executable calljs
  hs-source-dirs:      app
  main-is:             CallJS.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -DGHCJS_BROWSER
  build-depends:       base
                     , ghcjs-base
                     , jsaddle
                     , lens
  default-language:    Haskell2010

executable dom-j
  hs-source-dirs:      app
  main-is:             domj.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -DGHCJS_BROWSER
  build-depends:       base
                     , ghcjs-base
                     , jsaddle
                     , lens
  default-language:    Haskell2010

executable dom-exe
  hs-source-dirs:      app
  main-is:             Dom.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -DGHCJS_BROWSER
  build-depends:       base
                     , ghcjs-base
                     , ghcjs-dom
                     , lens
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/my-ghcjs-project
